# machine_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
simple_linear_regression/: main.ipynb
